gitops/apps/watcher/base/service-model.yaml
apiVersion: v1
kind: Service
metadata:
  name: model
spec:
  selector:
    app: model
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: model
    protocol: TCP
    port: 80  
    targetPort: 80
