gitops/apps/watcher/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watcher
  namespace: default
spec:
  selector:
    app: app
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: watcher
    protocol: TCP
    port: 80  
    targetPort: 3000
